--- a/alg50/pom.xml
+++ b/alg50/pom.xml
@@ -7,6 +7,13 @@
     <groupId>org.example</groupId>
     <artifactId>alg50</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+    </dependencies>
 
     <properties>
 <!--        <maven.compiler.source>8</maven.compiler.source>-->
